[package]
name = "move_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Move dependencies from Sui repository
move-core-types = { git = "https://github.com/MystenLabs/sui/tree/main/external-crates/move", rev = "main" }

# Other useful dependencies
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"

[build-dependencies]
lalrpop = "0.19.7"

[dev-dependencies]
assert_cmd = "2.0.4"
